Padding and White Space solved

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Inter:wght@400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Nunito+Sans:ital,wght@0,400;0,600;0,700;0,800;1,400;1,600;1,700&display=swap');
 
+:root {
+    accent-color: #AF13AF;
+}
+
 body {
     background-color: #FFFFFF;
     font-family: 'Montserrat', sans-serif;
@@ -9,7 +13,6 @@ body {
     line-height: 24px;
     font-weight: 400;
     color: #1a1a1a;
-    /* min-height: 150vh; */
 }
 
 /*------COLORS--------*/
@@ -30,7 +33,6 @@ body {
 .bg-neutral-4 { background-color: #DEDEDE;}
 .bg-neutral-5 { background-color: #F4F4F4;}
 .bg-neutral-6 { background-color: #F7F7F7;}
-.bg-neutral-7 { background-color: #E9E5E5;}
 .bg-neutral-footer { background-color: #393d46;}
 .bg-blue { background-color: #4D69FF;}
 .bg-green { background-color: #23AC00;}
@@ -178,15 +180,13 @@ body {
     font-size: 14px;
     line-height: 18px;
 }
-
-.fs-mine {
-    font-size: 16px;
-    line-height: 18px;
+.fs-form-input {
+    font-size: 12px;
+    line-height: 12px;
 }
-
-.fs-mine1 {
-    font-size: 32px;
-    line-height: 36px;
+.fs-forgot {
+    font-size: 16px;
+    line-height: 24px;
 }
 
 @media only screen and (max-width: 991.99px) {
@@ -245,6 +245,10 @@ body {
     .fs-button {
         font-size: 16px;
         line-height: 22px;
+    }
+    .fs-forgot {
+        font-size: 10px;
+        line-height: 20px;
     }
 }
 
@@ -310,7 +314,6 @@ body {
 .width-250px { width: 250px !important;}
 .width-300px { width: 300px !important;}
 .width-350px { width: 350px !important;}
-
 
 .height-25px { height: 25px !important;}
 .height-30px { height: 30px !important;}
@@ -519,49 +522,6 @@ body {
     background-color: #F49AF4;
 }
 
-
-/* My Buttons */
-.mine1-btn{
-    background-color: #FFFFFF;
-    border: 1px solid #AF13AF;
-    text-align: center;
-    color: #AF13AF;
-}
-
-.mine1-btn:hover {
-    background-color: #DD18DD;
-    color: #FFFFFF;
-    border-color: #DD18DD;
-}
-
-.mine1-btn:active, .mine-btn:focus {
-    background-color: #EA3EEA;
-    color: #FFFFFF;
-    border-color: #EA3EEA;
-}
-.mine1-btn:disabled, .mine-btn[disabled] {
-    opacity: 0.5;
-}
-
-
-.mine2-btn {
-    background-color: #AF13AF;
-    border: 2px solid #AF13AF;
-    text-align: center;
-    color: #FFFFFF;
-}
-.mine2-btn:hover {
-    background-color: #DD18DD;
-}
-.mine2-btn:active {
-    background-color: #EA3EEA;
-}
-.mine2-btn:disabled, .mine2-btn[disabled] {
-    background-color: #F49AF4;
-}
-
-
-
 .ghost-primary-btn {
     background-color: #FFFFFF;
     border: 1px solid #AF13AF;
@@ -707,29 +667,29 @@ select {
 .input-icon {
     height: 16px;
     position: absolute;
-    bottom: 18px;
+    bottom: 14px;
     left: 0.9rem;
 }
 .input-icon-2 {
     height: 12px;
     position: absolute;
-    bottom: 20px;
+    bottom: 16px;
     left: 0.9rem;
 }
 .input-icon-right {
     height: 8px;
     position: absolute;
-    bottom: 22px;
+    bottom: 18px;
     right: 1rem;
 }
 .password-toggler {
     position: absolute;
-    bottom: 17px;
+    bottom: 12px;
     right: 0.9rem;
     cursor: pointer;
 }
 .password-eyes {
-    height: 18px;
+    height: 20px;
     opacity: 0.9;
 }
 .eye-open {
@@ -737,9 +697,6 @@ select {
 }
 .eye-closed {
     display: block;
-}
-.radio-wrap {
-    padding-left: 7px;
 }
 input[type="radio"] {
     appearance: none;
@@ -751,6 +708,27 @@ input[type="radio"] {
 }
 input[type="radio"]:checked {
     background: #AF13AF;
+}
+input[type="checkbox"] {
+    appearance: none;
+    width: 24px;
+    height: 24px;
+    background: #FFFFFF;
+    border: 0.75px solid #CAD4DD;
+    border-radius: 1px;
+}
+input[type="checkbox"]:checked {
+    /* background: #AF13AF; */
+    background-image: url("https://iamkate.com/checkbox.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    border: 0.75px solid #F49AF4;
+}
+input[type="checkbox"]:hover {
+    box-shadow: 0 0 0 2px #F49AF430;
+}
+input[type="checkbox"]:focus, input[type="checkbox"]:active {
+    box-shadow: 0 0 0 2px #F49AF470;   
 }
 /*-------ALERTS--------*/
 .kim-alert {
